# tracklib

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pr-badge.yml  pull_request_template.md
.github/workflows/: frameworkPr.yml  frameworkValidation.yml  validation.yml
inc/: TRestTrack.h  TRestTrack2DAnalysisProcess.h  TRestTrack3DAnalysisProcess.h  TRestTrackAlphaAnalysisProcess.h  TRestTrackAnalysisProcess.h  TRestTrackBlobAnalysisProcess.h  TRestTrackDetachIsolatedNodesProcess.h  TRestTrackEvent.h  TRestTrackLineAnalysisProcess.h  TRestTrackLinearizationProcess.h  TRestTrackPathMinimizationProcess.h  TRestTrackPointLikeAnalysisProcess.h  TRestTrackReconnectionProcess.h  TRestTrackReductionProcess.h  TRestTrackViewerProcess.h
macros/: REST_Track_MaxEnergyTrackCentering.C  REST_Track_PlotAlphaAna.C
pipeline/: validateLibrary.py
src/: TRestTrack.cxx  TRestTrack2DAnalysisProcess.cxx  TRestTrack3DAnalysisProcess.cxx  TRestTrackAlphaAnalysisProcess.cxx  TRestTrackAnalysisProcess.cxx  TRestTrackBlobAnalysisProcess.cxx  TRestTrackDetachIsolatedNodesProcess.cxx  TRestTrackEvent.cxx  TRestTrackLineAnalysisProcess.cxx  TRestTrackLinearizationProcess.cxx  TRestTrackPathMinimizationProcess.cxx  TRestTrackPointLikeAnalysisProcess.cxx  TRestTrackReconnectionProcess.cxx  TRestTrackReductionProcess.cxx  TRestTrackViewerProcess.cxx
tsp/inc/: bigguy.h  combs.h  config.h  cut.h  cuttree.h  edgegen.h  heldkarp.h  kdtree.h  linkern.h  localcut.h  lp.h  pq.h  tinytsp.h  tsp.h  util.h  verify.h
tsp/src/: allocrus.c  branch.c  (+3 more)
